# ChartCraftHub

./: .buildinfo  .gitignore  LICENSE  Makefile  README.md  genindex.html  index.html  intro.html  objects.inv  pyproject.toml  resources.html  search.html  searchindex.js  section_1.html  section_2.html  section_3.html  setup.html  terminology.html  usage.html
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
.github/workflows/: ci.yaml  sphinx.yaml
_sources/: index.rst.txt  intro.rst.txt  resources.rst.txt  section_1.rst.txt  section_2.rst.txt  setup.rst.txt  terminology.rst.txt  usage.rst.txt
docs/: requirements.txt
docs/source/: conf.py  index.rst  intro.rst  resources.rst  section_1.rst  section_2.rst  section_3.rst  setup.rst  terminology.rst
docs/source/_static/: custom.css
src/ChartCraftHub/: __main__.py  chapter_1.ipynb  chapter_2.ipynb  chapter_3.ipynb  chapter_4.ipynb  chapter_5.ipynb  chapter_6.ipynb  chapter_7.ipynb  convay.py  convay_simplified.py  core.py  index.html  index_hello.html  todo.py
src/chartcrafthub/: __main__.py  abstractions.py  anatomy_of_figure.py  chapter_1.ipynb  chapter_1_0.ipynb  chapter_1_1.ipynb  chapter_1_3.ipynb  chapter_2.ipynb  chapter_2_0.ipynb  chapter_2_1.ipynb  chapter_3.ipynb  convay.py  convay_simplified.py  ex_1_1.py  ex_1_2.py  ex_2_1.py  ex_2_2.py  ex_2_3.py  ex_2_4.py  ex_2_5.py  ex_2_6.py  ex_2_7.py  index_pangram.html  logo_generator.ipynb  template.py  utils.py
tests/: test_core.py
